# pdf-redact

./: .gitignore  NOTICE  README.md  demo.sh  pdf_redact.py  pdf_redact_gui.py  pyproject.toml  setup.sh
metadata/: PROVENANCE.md  THIRD_PARTY_LICENSES.md  file-manifest.json  git-history.json
samples/: make_sample.py
tests/: test_pdf_redact.py
